bugfix: Élimination gap du carousel
Le carousel de films dans lister.php s'affiche plus vers le haut de la page désormais.

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ img {
 
 .film {
     height: 600px;
+    top: -100px;
     margin-top: -200px;
 }
 
